<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".PolicyNumberSearchActivity">
    <android.support.v7.widget.LinearLayoutCompat
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
        <include
                layout="@layout/toolbar"></include>
        <android.support.v7.widget.LinearLayoutCompat
                android:padding="10dp"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent">
            <android.support.v7.widget.LinearLayoutCompat
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                <android.support.v7.widget.AppCompatEditText
                        android:textCursorDrawable="@drawable/cursor_background"
                        android:layout_weight="1"
                        android:textSize="12dp"
                        style="@style/TextAppearance.AppCompat.Body1"
                        android:padding="10dp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="number"
                        android:id="@+id/policynumberEdt"
                        android:background="@drawable/rounded_et"
                        android:hint="@string/policynumber"/>
                <android.support.v7.widget.AppCompatTextView
                        android:layout_marginLeft="5dp"
                        android:layout_weight="2"
                        android:textStyle="bold"
                        android:textColor="@color/white"
                        android:gravity="center"
                        style="@style/Base.TextAppearance.AppCompat.Button"
                        android:padding="10dp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/searchBtn"
                        android:background="@drawable/rounded_bu"
                        android:text="@string/search"/>

            </android.support.v7.widget.LinearLayoutCompat>
            <android.support.v7.widget.LinearLayoutCompat
                    android:layout_marginTop="10dp"
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                <android.support.v7.widget.AppCompatTextView
                        android:gravity="center"
                        android:textColor="@color/white"
                        android:background="@color/appcolor"
                        android:textSize="12dp"
                        style="@style/TextAppearance.AppCompat.Body1"
                        android:padding="10dp"
                        android:id="@+id/nameTxt"
                        android:text="@string/VCH_INSURED_NAME"
                        android:layout_weight="1"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"/>
                <android.support.v7.widget.AppCompatTextView
                        android:layout_marginLeft="1dp"
                        android:gravity="center"
                        android:textColor="@color/white"
                        android:background="@color/appcolor"
                        android:textSize="12dp"
                        style="@style/TextAppearance.AppCompat.Body1"
                        android:padding="10dp"
                        android:id="@+id/policynoTxt"
                        android:text="@string/VCH_POLICY_NO"
                        android:layout_weight="1"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"/>
            </android.support.v7.widget.LinearLayoutCompat>
            <android.support.v4.widget.SwipeRefreshLayout
                    android:id="@+id/swiperefreshlayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                <android.support.v7.widget.RecyclerView
                        android:fitsSystemWindows="true"
                        tools:listitem="@layout/recyclerview_items"
                        android:visibility="visible"
                        android:id="@+id/recyclerview"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">
                </android.support.v7.widget.RecyclerView>

            </android.support.v4.widget.SwipeRefreshLayout>
        </android.support.v7.widget.LinearLayoutCompat>

    </android.support.v7.widget.LinearLayoutCompat>
</android.support.constraint.ConstraintLayout>