<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".LoginActivity" android:background="@color/white">
    <android.support.v7.widget.LinearLayoutCompat
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
        <android.support.v7.widget.LinearLayoutCompat
                android:gravity="center"
                android:padding="20dp"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent">
            <ScrollView
                    android:fitsSystemWindows="true"
                    android:fillViewport="true"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                <android.support.v7.widget.LinearLayoutCompat
                        android:orientation="vertical"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">
                    <android.support.v7.widget.AppCompatEditText
                            android:textCursorDrawable="@drawable/cursor_background"
                            android:drawablePadding="5dp"
                            android:drawableLeft="@drawable/ic_emailid"
                            android:textSize="12dp"
                            style="@style/TextAppearance.AppCompat.Body1"
                            android:padding="7dp"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:inputType="textEmailAddress"
                            android:id="@+id/emailidEdt"
                            android:background="@drawable/rounded_et"
                            android:hint="@string/emailid">
                        <requestFocus></requestFocus>
                    </android.support.v7.widget.AppCompatEditText>
                    <android.support.v7.widget.AppCompatEditText
                            android:textCursorDrawable="@drawable/cursor_background"
                            android:layout_marginTop="10dp"
                            android:drawablePadding="5dp"
                            android:drawableLeft="@drawable/ic_password"
                            android:textSize="12dp"
                            style="@style/TextAppearance.AppCompat.Body1"
                            android:padding="7dp"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:inputType="textPassword"
                            android:id="@+id/passwordEdt"
                            android:background="@drawable/rounded_et"
                            android:hint="@string/password"/>

                    <android.support.v7.widget.AppCompatTextView
                            android:textStyle="bold"
                            android:textColor="@color/white"
                            android:gravity="center"
                            android:layout_marginTop="20dp"
                            style="@style/Base.TextAppearance.AppCompat.Button"
                            android:padding="10dp"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:id="@+id/loginBtn"
                            android:background="@drawable/rounded_bu"
                            android:text="@string/login"/>
                </android.support.v7.widget.LinearLayoutCompat>
            </ScrollView>
        </android.support.v7.widget.LinearLayoutCompat>
    </android.support.v7.widget.LinearLayoutCompat>
</android.support.constraint.ConstraintLayout>